<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dip">

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dip"
            android:layout_marginTop="61dip"
            android:layout_marginEnd="32dip"
            android:backgroundTint="@color/azzurro"
            android:text="@string/next"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geminiresponse" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dip"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="160dip"
            android:text="@string/che_cazzo_vuoi_sapere"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="166dip"
            android:layout_height="24dip"
            android:layout_marginStart="136dip"
            android:layout_marginTop="27dip"
            android:layout_marginEnd="136dip"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dip"
            android:backgroundTint="@color/azzurro"
            android:text="@string/aumenta"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/geminiresponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dip"
            android:layout_marginTop="43dip"
            android:layout_marginEnd="175dip"
            android:cursorVisible="false"
            android:justificationMode="inter_word"
            android:keepScreenOn="false"
            android:scrollIndicators="right"
            android:text="gemini"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textFontWeight="18"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geminiprompt"
            tools:text="prompt: " />

        <Button
            android:id="@+id/inviagemini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dip"
            android:layout_marginTop="33dip"
            android:layout_marginEnd="33dip"
            android:backgroundTint="@color/azzurro"
            android:text="INVIA"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/geminiprompt"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <MultiAutoCompleteTextView
            android:id="@+id/geminiprompt"
            android:layout_width="139dip"
            android:layout_height="49dip"
            android:layout_marginStart="23dip"
            android:layout_marginTop="30dip"
            android:layout_marginEnd="16dip"
            android:hint="@string/prompt"
            android:minHeight="48dip"
            app:layout_constraintEnd_toStartOf="@+id/inviagemini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>