<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radius"
    android:contentDescription="@string/app_name"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dip"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <!--<Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            app:layout_constraintBottom_toTopOf="@id/textview_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

        <!-- <TextView
             android:id="@+id/textview_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/lorem_ipsum"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
             app:layout_constraintTop_toBottomOf="@id/button_second" />
        <WebView
            android:id="@+id/web"
            android:layout_width="0dp"
            android:layout_height="834dp"
            android:clickable="false"
            android:clipChildren="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />-->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="378dip"
            android:layout_height="355dip"
            android:layout_marginStart="18dip"
            android:layout_marginTop="21dip"
            android:layout_marginEnd="18dip"

            android:src="@drawable/bmw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dip"
            android:layout_marginEnd="16dp"
            android:background="@drawable/radius"
            android:backgroundTint="@color/prova"
            android:editable="true"
            android:justificationMode="inter_word"
            android:padding="15dip"
            android:text="@string/lorem_ipsum1"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="270dip"
            android:layout_height="27dip"
            android:layout_marginStart="170dip"
            android:layout_marginTop="30dip"
            android:layout_marginEnd="170dip"
            android:progressTint="@color/azzurro"
            android:thumbTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewslidebar" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="480dip"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dip"
            android:layout_marginTop="28dip"
            android:layout_marginEnd="15dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.605"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/setcalendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dip"
            android:layout_marginTop="17dip"
            android:layout_marginEnd="8dip"
            android:backgroundTint="@color/azzurro"
            android:padding="5dip"
            android:text="@string/data_di_oggi"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dip"
            android:layout_marginTop="29dip"
            android:layout_marginEnd="30dip"
            android:text="@string/la_data_di_oggi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/setcalendario"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <TextView
            android:id="@+id/vettore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dip"
            android:layout_marginTop="16dip"
            android:layout_marginEnd="168dip"
            android:background="@drawable/radius"
            android:backgroundTint="@color/prova"
            android:padding="10dip"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:text="@string/vettore"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dip"
            android:layout_marginEnd="40dip"
            android:backgroundTint="@color/azzurro"
            android:padding="10dip"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:text="@string/salva"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/multiAutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dip"
            android:layout_marginTop="44dip"
            android:layout_marginEnd="2dip"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/nota"
            android:inputType="textMultiLine"
            android:minHeight="48dip"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setcalendario" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="157dip"
            android:layout_marginTop="22dip"
            android:layout_marginEnd="157dip"
            android:backgroundTint="@color/azzurro"
            android:text="estrapola"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiAutoCompleteTextView" />

        <TextView
            android:id="@+id/textViewslidebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dip"
            android:layout_marginTop="28dip"
            android:layout_marginEnd="172dip"
            android:background="@drawable/radius"
            android:backgroundTint="@color/viola"
            android:padding="5dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <TextView
            android:id="@+id/textViewrequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dip"
            android:layout_marginTop="27dip"
            android:layout_marginEnd="2dip"
            android:background="@drawable/radius"
            android:backgroundTint="@color/azzurro"
            android:padding="10dip"
            android:text="response"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView77" />

        <Button
            android:id="@+id/buttonrichiedi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dip"
            android:layout_marginTop="97dip"
            android:layout_marginEnd="1dip"
            android:text="RICHIEDI"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView77"
            app:layout_constraintTop_toBottomOf="@+id/vettore" />

        <TextView
            android:id="@+id/textView77"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dip"
            android:layout_marginTop="100dip"
            android:layout_marginEnd="10dip"
            android:background="@drawable/radius"
            android:backgroundTint="#3F51B5"
            android:duplicateParentState="false"
            android:editable="true"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/prompt"
            android:isScrollContainer="false"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="always"
            android:padding="10dip"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toTopOf="@+id/textViewrequest"
            app:layout_constraintEnd_toStartOf="@+id/buttonrichiedi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vettore" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>